<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:contentDescription="@null" />

    <RelativeLayout
        android:id="@+id/actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <ImageView
            android:id="@+id/close"
            android:layout_width="@dimen/action_button_size"
            android:layout_height="@dimen/action_button_size"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:background="@drawable/ripple_oval_black"
            android:contentDescription="@string/photo_close_content_description"
            android:elevation="8dp"
            android:padding="8dp"
            android:src="@drawable/ic_close_24"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/share"
            android:layout_width="@dimen/action_button_size"
            android:layout_height="@dimen/action_button_size"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="16dp"
            android:layout_toStartOf="@id/save"
            android:background="@drawable/ripple_oval_black"
            android:contentDescription="@string/photo_share_content_description"
            android:elevation="8dp"
            android:padding="8dp"
            android:src="@drawable/ic_share_24"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/action_button_size"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/ripple_rectangle_yellow_600_corners_16"
            android:elevation="8dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="0.05"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/photo_save"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filter_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="4"
        tools:listitem="@layout/recycler_view_filter_item" />

    <include
        layout="@layout/bottom_sheet_filter_intensity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_behavior="@string/bottom_sheet_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>