<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <ImageView
            android:id="@+id/close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:contentDescription="@string/filter_intensity_close_content_description"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/ic_close_24"
            app:tint="@color/grey_400" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif"
            android:text="@string/filter_intensity"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif-medium"
            android:padding="8dp"
            android:text="@string/filter_intensity_apply"
            android:textAllCaps="true"
            android:textColor="@color/yellow_600"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/grey_900" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="48dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-medium"
                android:letterSpacing="0.1"
                android:text="@string/filter_intensity"
                android:textAllCaps="true"
                android:textColor="@color/grey_100"
                android:textSize="10sp"
                tools:ignore="RelativeOverlap,SmallSp" />

            <TextView
                android:id="@+id/intensity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-medium"
                android:letterSpacing="0.1"
                android:textColor="@color/grey_100"
                android:textSize="10sp"
                tools:ignore="RelativeOverlap,SmallSp"
                tools:text="100" />

        </RelativeLayout>

        <SeekBar
            android:id="@+id/intensity_slider"
            style="@style/Widget.App.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/seekbar_height"
            android:max="@integer/filter_intensity_max" />

    </LinearLayout>

</LinearLayout>
